# atium

./: .gitignore  .pylintrc  Cargo.toml  ReadMe.md  array_util.py  build.gradle.kts  chart_util.py  data_import.py  indicator.py  performance.py  pom.xml  requirements.txt  sample.py  sample_signal.py  tester.py  volatility.py
docs/: OHLCNotes.md  PythonSetup.md
pattern/contrarian/: doji.py  engulfing.py  euphoria.py  hammer.py  harami_flexible.py  harami_strict.py  inside_up_down.py  mirror.py  shrinking.py  spinning_top.py  star.py  tweezers.py
pattern/trend_following/: bottle.py  double_trouble.py  hikkake.py  marubozu.py  quintuplets.py  slingshot.py  three_candles.py  three_methods.py
python/: array_util.py  data_import.py  gemini_sample.py  indicator.py  rounding_util.py  sample_signal.py  tester.py  volatility.py
python/charting/: heikin_ashi.py  k_signal.py
python/gemini/: gemini.py
python/pattern/contrarian/: abandoned_baby.py  barrier.py  blockade.py  (+13 more)
src/: array_util.rs  candle_utils.rs  data_import.rs  main.rs
src/pattern/: mod.rs
strategy/: bottle_stochastic_indicator.py  double_trouble_rsi.py
strategy/contrarian/: abandoned_baby.py  blockade.py  doji.py  doji_rsi.py  engulfing.py  euphoria_k_envelope.py  harami_flexible.py  mirror.py  on_neck.py  spinning_top.py  stick_sandwhich.py  tower.py  tweezers.py
strategy/trend_following/: double_trouble.py  h.py  marubozu_k_volatility.py  slingshot.py  three_candles.py  three_candles_moving_average.py
trend_following/: hikkake.py  marubozu.py  tasuki.py  three_candles.py  three_methods.py
(+117 files in other folders)
